syntax = "proto3";

package greet;

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    // Unary
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetWithDeadLine (GreetRequest) returns (GreetResponse);

    // Server streaming
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);

    // Client streaming
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);

    // Bi-Directional
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);

}